<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/dino_buttons" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/logo_margin"
                android:layout_marginEnd="@dimen/logo_margin"
                android:layout_marginTop="@dimen/logo_margin"
                android:layout_marginBottom="@dimen/logo_margin"
                android:justificationMode="inter_word"
                android:textSize="@dimen/h3_text_size"
                android:textStyle="bold"
                android:text="@string/btn_p1"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/splash_margin"
                android:layout_marginBottom="@dimen/splash_margin"
                android:src="@drawable/dino"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/flight_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/logo_margin"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="@dimen/logo_margin"
                android:textSize="@dimen/h3_text_size"
                android:textStyle="bold"
                android:lineSpacingExtra="@dimen/line_space"
                android:text="@string/flight_mode"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/logo_margin"
                android:layout_marginEnd="@dimen/logo_margin"
                android:layout_marginBottom="@dimen/logo_margin"
                android:justificationMode="inter_word"
                android:bufferType="spannable"
                android:textSize="@dimen/h3_text_size"
                android:textStyle="bold"
                android:lineSpacingExtra="@dimen/line_space"
                android:text="@string/go_on"/>

            <Button
                android:id="@+id/btn_go"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/pink"
                android:layout_marginBottom="@dimen/logo_margin"
                android:typeface="sans"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:text="@string/btn_go"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>